--- a/init/init.target.rc
+++ b/init/init.target.rc
@@ -369,6 +369,9 @@ on boot
 
     chmod 0666 /sys/csiphy_umd_paras/csiphy_umd_paras
 
+    # Touch
+    chown system system /sys/devices/virtual/touch/touch_dev/bump_sample_rate
+
 on init && property:ro.boot.mode=charger
     wait_for_prop vendor.all.modules.ready 1
     mount_all /vendor/etc/charger_fw_fstab.qti --early
